# qt_introductory_course

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  entrypoint.sh
server/: main.py
warmup_applications/: CMakeLists.txt
warmup_applications/01_cpp_fundamentals/: CMakeLists.txt
warmup_applications/01_cpp_fundamentals/00_meta_object/: CMakeLists.txt  header.h  main.cpp
warmup_applications/01_cpp_fundamentals/01_qt_core_signal_slots/: CMakeLists.txt  header.h  main.cpp
warmup_applications/01_cpp_fundamentals/02_qt_core_properties/: CMakeLists.txt  header.h  main.cpp
warmup_applications/01_cpp_fundamentals/03_qt_ownership/: CMakeLists.txt  header.h  main.cpp
warmup_applications/01_cpp_fundamentals/04_exercise/: CMakeLists.txt
warmup_applications/01_cpp_fundamentals/04_method_invocation/: CMakeLists.txt  header.h  main.cpp
warmup_applications/01_cpp_fundamentals/05_exercise/: CMakeLists.txt  header.h
warmup_applications/01_cpp_fundamentals/06_solution/: CMakeLists.txt  exercise.txt  main.cpp
warmup_applications/02_qml_fundamentals/: CMakeLists.txt
warmup_applications/02_qml_fundamentals/01_hierarchy/: CMakeLists.txt  main.qml
warmup_applications/02_qml_fundamentals/02_anchoring_and_layouts/: Anchors.qml  CMakeLists.txt  Coordinates.qml  Layouts.qml  Positioners.qml  main.qml  qml.qrc
warmup_applications/02_qml_fundamentals/03_repeater/: CMakeLists.txt  main.qml
warmup_applications/02_qml_fundamentals/05_mousearea/: CMakeLists.txt  main.qml
warmup_applications/02_qml_fundamentals/06_qml_and_javascript/: CMakeLists.txt  main.qml
warmup_applications/02_qml_fundamentals/07_animations/: CMakeLists.txt  main.qml
warmup_applications/02_qml_fundamentals/08_exercise/: CMakeLists.txt  main.qml
warmup_applications/02_qml_fundamentals/08_property_bindings/: CMakeLists.txt
warmup_applications/02_qml_fundamentals/09_drag_handler/: CMakeLists.txt  main.qml
warmup_applications/02_qml_fundamentals/09_solution/: CMakeLists.txt  main.qml
warmup_applications/02_qml_fundamentals/10_states/: CMakeLists.txt  main.qml
warmup_applications/02_qml_fundamentals/11_state_machine/: CMakeLists.txt  main.qml
warmup_applications/02_qml_fundamentals/12_transitions/: CMakeLists.txt  main.qml
warmup_applications/02_qml_fundamentals/13_styles/: CMakeLists.txt  main.qml
warmup_applications/02_qml_fundamentals/14_exercise/: CMakeLists.txt
warmup_applications/02_qml_fundamentals/15_solution/: CMakeLists.txt  main.qml
warmup_applications/03_combine_cpp_qml/: CMakeLists.txt
warmup_applications/03_combine_cpp_qml/01_register_context_property/: CMakeLists.txt  main.cpp  main.qml
warmup_applications/03_combine_cpp_qml/02_register_qml_type/: CMakeLists.txt  header.h  main.cpp  main.qml
warmup_applications/03_combine_cpp_qml/03_register_qml_type_pro/: main.qml  myqmltype.h  qml_type.pro
weather_application/: CMakeLists.txt
weather_application/applications/: CMakeLists.txt
weather_application/applications/cmdline/: CMakeLists.txt  main.cpp
weather_application/applications/qtquick/: CMakeLists.txt  application.cpp  main.cpp  resources.qrc  update_l10n.sh
weather_application/applications/qtquick/l10n/: german_de.ts
weather_application/applications/qtquick/qrc/qml/: ForecastWeatherItem.qml  Line.qml  Main.qml  ScaledImage.qml  SelectionBackground.qml  SettingsMenu.qml  Style.qml  TodayWeatherItem.qml  ViewInit.qml  ViewSettings.qml  ViewWeather.qml
weather_application/applications/qtwidget/: CMakeLists.txt  label_aspect_ratio.cpp  label_aspect_ratio.h  main.cpp  main_window.cpp  main_window.h  resources.qrc  style_sheet.cpp  style_sheet.h  widget_content.cpp  widget_content.h  widget_forecast_item.cpp  widget_forecast_item.h  widget_settings.cpp  widget_settings.h  widget_today.cpp  widget_today.h
weather_application/applications/qtwidget/qrc/css/: stylesheet.css
weather_application/libraries/: CMakeLists.txt
weather_application/libraries/businesslogic/: CMakeLists.txt
weather_application/libraries/businesslogic/tests/: CMakeLists.txt  main.cpp  test_model_forecast.cpp  test_model_forecast.h  test_model_today.cpp  test_model_today.h
weather_application/libraries/openweathermap/: CMakeLists.txt
weather_application/libraries/openweathermap/tests/: CMakeLists.txt  day.json  forecast.json  invalid_appid.json  main.cpp  resources.qrc  test_replies.cpp  test_replies.h  test_requests.cpp  test_requests.h
