cmake_minimum_required(VERSION 3.14)
project(02_qml_fundamentals)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(01_hierarchy)
add_subdirectory(02_anchoring_and_layouts)
add_subdirectory(03_repeater)
add_subdirectory(05_mousearea)
add_subdirectory(06_qml_and_javascript)
add_subdirectory(07_animations)
add_subdirectory(08_property_bindings)
add_subdirectory(09_drag_handler)
add_subdirectory(10_states)
add_subdirectory(11_state_machine)
add_subdirectory(12_transitions)
add_subdirectory(13_styles)
add_subdirectory(14_exercise)
add_subdirectory(15_solution)
